# crud-projeto-estagio

.github/workflows/: pipeline.yaml
backend/: .coverage  .gitlab-ci.yml  alembic.ini  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: d96745595d4b_migrando_para_mysql.py
backend/projeto_fastapi/: app.py  database.py  models.py  schemas.py
backend/tests/: conftest.py  test_app.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/__mocks__/: fileMock.js
frontend/src/: App.jsx  index.css
frontend/src/__tests__/: Api.test.jsx  Button.test.jsx  InputForm.test.jsx
frontend/src/components/Button/: index.jsx  styles.module.css
frontend/src/components/Header/: index.jsx  styles.module.css
frontend/src/components/InputForm/: index.jsx  styles.module.css
frontend/src/components/UserList/: UserList.jsx  styles.module.css
